<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/margin_16"
    android:paddingTop="@dimen/margin_16"
    android:paddingRight="@dimen/margin_16"
    android:paddingBottom="@dimen/margin_16"
    tools:context=".ui.register.view.RegisterFragment">

    <EditText
        android:importantForAutofill="no"
        android:id="@+id/et_username_reg"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="@dimen/margin_16"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/font_size_14"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:importantForAutofill="no"
        android:id="@+id/et_email_reg"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/font_size_14"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username_reg" />

    <EditText
        android:importantForAutofill="no"
        android:id="@+id/et_password_reg"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/font_size_14"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_reg" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:backgroundTint="@color/wine"
        android:enabled="false"
        android:text="@string/action_register"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_14"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_reg"
        app:layout_constraintVertical_bias="0.019" />

</androidx.constraintlayout.widget.ConstraintLayout>